--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**
 !**/src/test/**
 
+src/main/java/me/alexthered/jooqdemo/generated/**
+
 ### STS ###
 .apt_generated
 .classpath
